# FinAI-Research-Workflow

./: .env.example  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  AGENTS.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPRECATED.md  Dockerfile  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.sse  FAQ.md  LEGAL_CONSENT.md  MANIFEST.in  Makefile  PROJECT_EVALUATION.md  QUICKSTART.md  README.md  README_EN.md  SECURITY.md  SETUP_GUIDE.md  USAGE_GUIDE.md  bib_check_report.md  codecov.yml  conftest.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  paid_source_warnings.jsonl  pyproject.toml  requirements-ci.txt  requirements-optional.txt  requirements.txt  run.sh  (+2 more)
.archive/audit/: BIB_DOI_AUDIT.md  DOCS-AUDIT-2026-07-12.md
.claude/commands/: brief.md  lit-review.md  research.md  test.md
.cursor/rules/: mcp_tools.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  labeler.yml  release-drafter.yml
.github/demo/: README.md
.github/workflows/: bib-check.yml  ci.yml  docs.yml  latex-check.yml  pr-labeler.yml  publish-pypi.yml  release-sign.yml
AI_TOOL_START/: index.html
ARCHITECTURE/: index.html
BRAND_AND_EMAIL_GUIDE/: index.html
DOCKER_INSTALL/: index.html
FINAL_PUSH_SCRIPT/: index.html
HIGH_STAR_STRATEGY/: index.html
PRE_PUSH_AUDIT_GUIDE/: index.html
PUBLISHING_GUIDE/: index.html
REPOSITORY_SETUP/: index.html
YOUR_SPECIFIC_FIX/: index.html
_audit_reports/: 2026-07-12-codex-outputs-audit.md
adr/ADR-001-fallback-strategy/: index.html
adr/ADR-001-seven-layer-fallback/: index.html
adr/ADR-002-provenance-chain/: index.html
adr/ADR-002-provenance-chain-design/: index.html
adr/ADR-003-self-evolution-protocol/: index.html
adr/ADR-003-sepl-protocol/: index.html
adr/ADR_INDEX/: index.html
api/: index.html
api_reference/: index.html
config/: llm_config.json  mcp_profiles.json
config/daemon/: setup-daemon.sh
config/halt_rules/: finance_empirical.yaml
data/: .gitkeep  README.md
data/policy_experiments/: policy_database.json
data/sample/: README.md  did_synthetic_panel.csv  esg_panel_demo.csv  references_demo.bib
docs/: CITATION_GUIDE.md  DEMO_GIF_README.md  DOCKER_INSTALL.md  IMPROVEMENT_ROADMAP.md  api_reference.md  audit-workflow.md  index.md  mkdocs.yml  竞品分析报告.md  论文写作工作流使用指南.md
docs/adr/: ADR-001-fallback-strategy.md  ADR-001-seven-layer-fallback.md  ADR-002-provenance-chain-design.md  ADR-003-self-evolution-protocol.md  ADR-003-sepl-protocol.md  ADR_INDEX.md
docs/audit/: AUDIT_2026-07-21.md  BIB_DOI_AUDIT.md  OPENSSF_AUDIT.md
docs/plans/: 2026-05-23-agent-workflow.md
docs/tutorials/: 01-quickstart.md  03-research-directions.md  04-mcp-marketplace.md  05-event-driven-research.md  README.md  index.md
examples/_template/: ABSTRACT.md  IDEA_REPORT.md  LIT_REVIEW.md  PAPER_OUTLINE.md  README.md  REFINED_DESIGN.md
external_data_sources/: index.html
knowledge/: README.md
knowledge/skills/: fin-experiment-design.md  fin-idea-discovery.md
mcp_servers/: __init__.py  mcp_mock_helper.py  patch_mock_servers.py  start_all.sh
mcp_servers/user_arxiv/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_bea_data/: Dockerfile  server.py
mcp_servers/user_brave_search/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_chinese_customs/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_chinese_literature/: server.py
mcp_servers/user_cnki/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_cnrd/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_context7/: Dockerfile  server.py
mcp_servers/user_cryptocompare/: Dockerfile  server.py
mcp_servers/user_csmar/: Dockerfile  server.py
mcp_servers/user_e2b_mcp/: Dockerfile  server.py
mcp_servers/user_eastmoney_bond/: Dockerfile  server.py
mcp_servers/user_eastmoney_fund/: Dockerfile  server.py
mcp_servers/user_eastmoney_option/: Dockerfile  server.py
mcp_servers/user_eodhd/: Dockerfile  (+1 more)
notebooks/: 00_quickstart.ipynb  01_did_lab.ipynb
scripts/: PROJECT_NUMBERS.json  SCRIPTS_INDEX.md  __init__.py  _record_demo.sh  _record_demo.sh.md  agent_pipeline.py  ai_router.py  audit_guard.py  auto_register_tools.py  check_bib.py  check_latex.sh  check_openssf.py  ci_security_gate.py  ci_verify.py  citation_graph.py  cli.py  count_assets.py  crossref_doi.py  dashboard.py  data_source_checker.py  data_version.py  demo_research_report.py  econometrics.py  econometrics_advanced.py  econometrics_extended.py  empirical_advisor.py  empirical_agent.py  enrich_bib_dois.py  event_monitor.py  exceptions.py  experiment_tracker.py  export_hubei_data.py  factor_models.py  fetch_msci_cyh.py  fetch_provincial_stats.py  fetch_us_esg_data.py  fin-viz-launcher.py  financial_report_structure.py  fix_mcp_stdout_banners.py  gen_architecture_diagrams.py  (+52 more)
search/: search_index.json
tests/: test__bootstrap_unit.py  test_a_share_firm_controls_unit.py  test_a_share_variables.py  test_agent_deep.py  test_agent_loader.py  test_agent_loader_unit.py  test_agent_pipeline.py  test_agent_pipeline_core.py  test_agent_pipeline_coverage.py  test_agent_pipeline_deep_exec.py  test_agent_pipeline_unit.py  test_agent_state_unit.py  test_agent_unit.py  test_ai_parliament_deep_exec.py  test_ai_parliament_unit.py  test_analyst_agents.py  test_audit_guard.py  test_audit_guard_yaml.py  test_auto_register_tools_deep.py  test_auto_register_tools_unit.py  test_auto_review_rules_unit.py  test_benchmark_econometrics_deep.py  test_benchmark_econometrics_unit.py  test_calendar_qualifier_unit.py  test_campaign_orchestrator_unit.py  test_causal_ml.py  test_chart_factory_deep_unit.py  test_chart_pipeline_unit.py  test_check_legal_consent_unit.py  test_checkpoint.py  test_china_carbon_events_unit.py  test_china_policy_events_unit.py  test_ci_verify_unit.py  test_citation_verifier_unit.py  test_cli_deep.py  test_cli_unit.py  test_collaboration_layer_unit.py  test_core_agent_pipeline_lg_unit.py  test_core_analyst_agents_coverage.py  test_core_chart_factory.py  (+240 more)
tutorials/: index.html
(+441 files in other folders)
