[build-system]
requires = ["hatchling>=1.30.0"]
build-backend = "hatchling.build"

[project]
name = "finai-research-workflow"
version = "1.0.0"
description = "经济金融领域 AI 学术研究工作流 — 论文写作（JF/JFE/RFS/经济研究/金融研究）与金融研报生成。集成 MCP 数据获取、因果推断（DID/IV/PSM/GMM）、LaTeX 排版和对抗性 review 循环。"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FinAI Research Workflow Contributors"}
]
keywords = [
    "academic-research",
    "financial-ai",
    "literature-review",
    "econometrics",
    "paper-writing",
    "latex",
    "mcp",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]

requires-python = ">=3.10"
dependencies = [
    # ── 数据处理 ─────────────────────────────────────────────────────────────
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    # ── 知识图谱 ─────────────────────────────────────────────────────────────
    "networkx>=3.2.0",
    # ── 可视化 ───────────────────────────────────────────────────────────────
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.21.0",
    # ── 文档解析 ─────────────────────────────────────────────────────────────
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    # python-pptx (PPT生成): 已移至 legacy 组，未集成
    "Pillow>=10.3.0",
    # ── 文本与格式 ───────────────────────────────────────────────────────────
    "markdown>=3.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    # lxml (XML/HTML解析): 已移至 legacy 组，未集成
    # ── 金融数据 ─────────────────────────────────────────────────────────────
    "akshare>=1.18.63",
    "yfinance>=0.2.0",
    "fastmcp>=0.1.0",
    "mcp>=1.0.0",
    # ── LLM / AI ─────────────────────────────────────────────────────────────
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    # ── 计量经济 ─────────────────────────────────────────────────────────────
    # linearmodels 已在 optional-dependencies.econometrics 中声明
    # ── 环境变量 / 配置 ─────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    # ── 数据库 ───────────────────────────────────────────────────────────────
    "duckdb>=0.9.0",
    # ── Web 服务 ─────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.32.0",
    "pypandoc>=0.8.0",
    # ── Excel ────────────────────────────────────────────────────────────────
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

rag = [
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "jieba>=0.42.0",
]

deep-learning = [
    # torch>=2.2.0 and accelerate>=0.30.0 are listed here as
    # heavyweight optional dependencies for future deep learning modules.
    # They are NOT currently imported by any scripts/ or tests/ file.
    # Uncomment when needed: "torch>=2.2.0", "accelerate>=0.30.0",
]

econometrics = [
    "linearmodels>=4.17",
    "pandas-datareader>=0.10.0",
    "pandasql>=0.7.3",
    "diff-in-diff2>=1.0.0",
]

knowledge = [
    "neo4j>=5.0.0",
    "pyvis>=0.3.0",
]

sandbox = [
    "e2b-code-interpreter>=2.0.0",
]

browser = [
    "playwright>=1.40.0",
]

monitor = [
    "apscheduler>=3.10.0",
]

# Legacy: packages declared in dependencies but not currently imported in scripts/tests.
# Kept here for reference — uncomment individually when needed.
# Removing from main dependencies reduces install time by ~45s.
legacy = [
    "tiktoken>=0.7.0",       # Tokenizer (未使用，可被openai代替)
    "lxml>=4.9.0",            # XML/HTML解析 (beautifulsoup4依赖但未显式import)
    "neo4j>=5.0.0",           # 图数据库 (未使用，knowledge图谱用networkx)
    "pyvis>=0.3.0",           # 网络可视化 (未使用)
    "pypandoc>=0.8.0",       # Pandoc包装器 (未使用)
    "python-pptx>=0.6.23",   # PPT生成 (未使用)
]

all = [
    "finai-research-workflow[dev,rag,deep-learning,econometrics,knowledge,sandbox,browser,monitor,legacy]",
]

[project.scripts]
# 主入口（轻量、不调 LLM、避免误触发 API）
finai = "scripts.cli:main"
finai-pipeline = "scripts.cli:pipeline_cmd_wrapper"
finai-test = "scripts.cli:test_cmd"
finai-health = "scripts.cli:health_cmd"
finai-data = "scripts.cli:data_cmd"
finai-lit-review = "scripts.cli:lit_review_cmd"

[project.urls]
Homepage = "https://github.com/csmar432/论文-研报工作流"
Documentation = "https://github.com/csmar432/论文-研报工作流#readme"
Repository = "https://github.com/csmar432/论文-研报工作流"
Issues = "https://github.com/csmar432/论文-研报工作流/issues"
Changelog = "https://github.com/csmar432/论文-研报工作流/blob/main/CHANGELOG.md"
Citation = "https://github.com/csmar432/论文-研报工作流/blob/main/CITATION.cff"
Releases = "https://github.com/csmar432/论文-研报工作流/releases"

# ── Hatch 构建配置 ───────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["scripts"]
# 不打包的东西 (字符串数组)
exclude = [
    "tests",
    "docs",
    "papers",
    "output",
    "data",
    "projects",
    "canvases",
    ".github",
    "scripts/legacy",
    "scripts/deprecated",
    "scripts/__pycache__",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/.env",
    "**/.env.local",
    "**/Thumbs.db",
    "**/*.db",
    "**/*.db-journal",
    "**/*.bak",
]

[tool.hatch.build.targets.wheel.force-include]
# 数据/资源目录必须显式 include，否则 wheel 不含
"config" = "finai_research_workflow/config"
"templates" = "finai_research_workflow/templates"
"knowledge" = "finai_research_workflow/knowledge"
"mcp_servers" = "finai_research_workflow/mcp_servers"
"examples" = "finai_research_workflow/examples"
"releases" = "finai_research_workflow/releases"

[tool.hatch.build.targets.sdist]
include = [
    "scripts",
    "config",
    "templates",
    "knowledge",
    "mcp_servers",
    "examples",
    "releases",
    "tests",
    "docs",
    "README.md",
    "README_EN.md",
    "使用指南.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
    "requirements.txt",
    "requirements-optional.txt",
    "Dockerfile",
    "Dockerfile.dashboard",
    "Dockerfile.gateway",
    "Dockerfile.sse",
    "docker-compose.yml",
    "Makefile",
    "run.sh",
    "run.bat",
    "mkdocs.yml",
    ".env.example",
    ".pre-commit-config.yaml",
    ".editorconfig",
    ".gitattributes",
    ".gitignore",
]
exclude = [
    ".github/internal-reports/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/.env",
    "**/.env.local",
    "**/.DS_Store",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "E722"]
ignore = ["E501", "B028"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests (require real network/db)",
    "unit: pure unit tests (no I/O)",
    "llm: tests that call LLM APIs (requires API key)",
    "mcp: tests that call MCP servers",
    "gpu: tests that require GPU",
    "flaky: known flaky tests (use with care)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:urllib3.*",
    "ignore::PendingDeprecationWarning",
    # Allow some common warnings during tests
    "default::UserWarning:scripts.*",
]
# Minimum coverage to pass CI
# Set lower than production target to allow incremental improvement
# 目标是 80%, 当前设为 60% (在 ci.yml 中)
minversion = "7.0"
